--- a/subpsace.ipynb
+++ b/subpsace.ipynb
@@ -2,20 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import requests\n",
     "from pytesseract import pytesseract\n",
     "from PIL import Image as img\n",
+    "from urllib.request import Request, urlopen,urlretrieve\n",
     "import copy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pytesseract.tesseract_cmd = r'c:\\users\\roshr\\appdata\\local\\programs\\python\\python310\\lib\\site-packages'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +194,7 @@
        "[6728 rows x 5 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,6 +202,55 @@
    "source": [
     "df = pd.read_json('subspace.json')\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Accessing All Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://cdn.subspace.money/w_subscriptions/Xk5bMvR8J7I_H6ywBPgSe.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/PKVCqar0VD_Bd5ZeH5u3b.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/80EDUPk1OPF2HsfPc2DxR.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/JIXqhr0Z3tgejBXiHMe5G.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/p4rpSF3m2Tk7MvYJes-rU.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/hTm_kemQ5eXLY-hAG7g6a.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/eCgajW4ozJSYuaedzwx8Z.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/KHPHJ3vRAwyIpkTeL6od_.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/ZjDa2LhXpqAqImRrYE6mX.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/dTXEOgLfz4O8gHoSz8Ucz.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/AQ8o5L1zpUnaMvxRFRifH.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/BpkaedJRaSjHY_WPuvGyo.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/F_xsSXo_xcRv8v84STSOW.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/WaVyKgxn_yUresyhv2BKa.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/zkcX1BNFKzzzacW6mPjY4.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/XybpVYhoKlltr3gvdrXIk.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/kJL9t8iJwrhvJMt9gU3P7.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/exyrl0gjwJi_Oi-8mMnCc.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/aTVQnuVesF_pTCxIqoFiN.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/1gDzdVsUmkaAIIV1h_8Ii.jpeg\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in df.iloc[:,0]:\n",
+    "    r = requests.get(i)\n",
+    "    print(i)\n",
+    "    with open('test.jpeg', 'wb') as out:\n",
+    "        out.write(r.content)\n",
+    "    im = Image.open(\"test.jpeg\")\n",
+    "im.show()"
    ]
   }
  ],
