Improved Date Extraction

--- a/subpsace.ipynb
+++ b/subpsace.ipynb
@@ -224,19 +224,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://cdn.subspace.money/w_subscriptions/Xk5bMvR8J7I_H6ywBPgSe.jpeg\n"
+      "https://cdn.subspace.money/w_subscriptions/Xk5bMvR8J7I_H6ywBPgSe.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/PKVCqar0VD_Bd5ZeH5u3b.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/80EDUPk1OPF2HsfPc2DxR.jpeg\n",
+      "https://cdn.subspace.money/w_subscriptions/JIXqhr0Z3tgejBXiHMe5G.jpeg\n"
      ]
     }
    ],
    "source": [
-    "for i in df.iloc[:1,0]:\n",
+    "for i in df.iloc[:4,0]:\n",
     "    r = requests.get(i)\n",
     "    print(i)\n",
     "    with open('test.jpeg', 'wb') as out:\n",
@@ -254,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +266,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,41 +294,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3:53 PM|4.8MB/sO 9 v J oll Wei ll We, GO\n",
-      "\n",
-      "<\n",
-      "\n",
-      "zomato\n",
-      "Gixe) PLUS\n",
-      "\n",
-      "First became member on 21 Jan '20\n",
-      "\n",
-      "You are a Pro Plus member\n",
-      "\n",
-      "9 ‘sc\n",
-      "\n",
-      "Free deliveries on all Up ta 30° extra off on\n",
-      "online orders food deliveries\n",
-      "\n",
-      "Expires on 13 May '23\n",
-      "\n",
-      "Explore pro dining partners\n",
-      "\n",
-      "Pro 15% OFF\n",
-      "Biergarten Hakuna Matata 1131 Bar +\n",
-      "Whitefield JP Nagar Indiranagar\n",
-      "\n",
-      "- o>\n",
-      "\n",
-      "Pro 20% OFF 4.5% Pro 15% OFF\n",
-      "\n",
+      "@ discovery+ »\n",
+      "< Manage Subscription\n",
+      "Times Prime x discovery+\n",
+      "Subscription Renewal Date: Mon 22 Aug 2022\n",
+      "Cancel My Subscription\n",
       "\n"
      ]
     }
@@ -333,6 +313,55 @@
    "source": [
     "data = pytesseract.image_to_string(invert, lang='eng', config='--psm 6')\n",
     "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "subscription renewal date: mon 22 aug 2022 2022-08-22 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dateutil import parser\n",
+    "text=data.lower().split('\\n')\n",
+    "for i in text:\n",
+    "    try:\n",
+    "        res = parser.parse(i, fuzzy=True)\n",
+    "        print(i,res)\n",
+    "    except:\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['@ discovery+ »',\n",
+       " '< manage subscription',\n",
+       " 'times prime x discovery+',\n",
+       " 'subscription renewal date: mon 22 aug 2022',\n",
+       " 'cancel my subscription',\n",
+       " '']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text"
    ]
   }
  ],
