Closest Date Detection using Input Info

--- a/subpsace.ipynb
+++ b/subpsace.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\roshr\\AppData\\Local\\Programs\\Python\\Python310\\Lib\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "C:\\Users\\roshr\\AppData\\Local\\Programs\\Python\\Python310\\Lib\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
-      "C:\\Users\\roshr\\AppData\\Local\\Programs\\Python\\Python310\\Lib\\site-packages\\numpy\\.libs\\libopenblas.FB5AE2TYXYH2IJRDKGDGQ3XBKLKTF43H.gfortran-win_amd64.dll\n",
-      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -23,6 +12,9 @@
     "import cv2 \n",
     "from pytesseract import pytesseract\n",
     "from PIL import Image\n",
+    "import datetime\n",
+    "from datetime import datetime\n",
+    "from dateutil import parser\n",
     "import copy"
    ]
   },
@@ -219,33 +211,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Accessing All Images"
+    "Date Processing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df['expiring_at']= df['expiring_at'].dt.to_pydatetime()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://cdn.subspace.money/w_subscriptions/Xk5bMvR8J7I_H6ywBPgSe.jpeg\n",
-      "https://cdn.subspace.money/w_subscriptions/PKVCqar0VD_Bd5ZeH5u3b.jpeg\n",
-      "https://cdn.subspace.money/w_subscriptions/80EDUPk1OPF2HsfPc2DxR.jpeg\n",
-      "https://cdn.subspace.money/w_subscriptions/JIXqhr0Z3tgejBXiHMe5G.jpeg\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Timestamp('2023-03-29 00:00:00')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in df.iloc[:4,0]:\n",
-    "    r = requests.get(i)\n",
-    "    print(i)\n",
-    "    with open('test.jpeg', 'wb') as out:\n",
-    "        out.write(r.content)\n",
-    "    im = Image.open(\"test.jpeg\")\n",
-    "im.show()"
+    "df.iloc[1,1]"
    ]
   },
   {
@@ -257,32 +252,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "def img_proc():\n",
+    "    image = cv2.imread('test.jpeg')\n",
+    "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    blur = cv2.GaussianBlur(gray, (3,3), 0)\n",
+    "    thresh = cv2.threshold(blur, 0, 255, cv2.THRESH_BINARY_INV + cv2.THRESH_OTSU)[1]\n",
     "\n",
-    "image = cv2.imread('test.jpeg')\n",
-    "gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
-    "blur = cv2.GaussianBlur(gray, (3,3), 0)\n",
-    "thresh = cv2.threshold(blur, 0, 255, cv2.THRESH_BINARY_INV + cv2.THRESH_OTSU)[1]\n",
-    "\n",
-    "# Morph open to remove noise and invert image\n",
-    "kernel = cv2.getStructuringElement(cv2.MORPH_RECT, (3,3))\n",
-    "opening = cv2.morphologyEx(thresh, cv2.MORPH_OPEN, kernel, iterations=1)\n",
-    "invert = 255 - opening\n",
-    "cv2.imwrite('converted.jpg',invert)"
+    "    # Morph open to remove noise and invert image\n",
+    "    kernel = cv2.getStructuringElement(cv2.MORPH_RECT, (3,3))\n",
+    "    opening = cv2.morphologyEx(thresh, cv2.MORPH_OPEN, kernel, iterations=1)\n",
+    "    invert = 255 - opening\n",
+    "    cv2.imwrite('converted.jpg',invert)\n",
+    "    return invert"
    ]
   },
   {
@@ -294,25 +279,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def txt_exr(invert):\n",
+    "    data = pytesseract.image_to_string(invert, lang='eng', config='--psm 6')\n",
+    "    text=data.lower().split('\\n')\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Date Extraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def date_exr(text):\n",
+    "    dates=[]\n",
+    "    for w in text:\n",
+    "        try:\n",
+    "            res = parser.parse(w, fuzzy=True)\n",
+    "            if res.time()==datetime.min.time():     #Only Extracts pure dates excluding things such as times on screenshot\n",
+    "                dates.append((res.date(),w))\n",
+    "        except:\n",
+    "            continue\n",
+    "    return(dates)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Accessing All Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "@ discovery+ »\n",
-      "< Manage Subscription\n",
-      "Times Prime x discovery+\n",
-      "Subscription Renewal Date: Mon 22 Aug 2022\n",
-      "Cancel My Subscription\n",
-      "\n"
+      "https://cdn.subspace.money/w_subscriptions/Xk5bMvR8J7I_H6ywBPgSe.jpeg\n",
+      "2023-05-13 [(datetime.date(2020, 1, 21), \"first became member on 21 jan '20\"), (datetime.date(2022, 10, 30), 'free deliveries on all up ta 30° extra off on'), (datetime.date(2023, 5, 13), \"expires on 13 may '23\"), (datetime.date(2022, 10, 15), 'routes bepress at sat opogrtsa at'), (datetime.date(2022, 10, 4), '; a oe 4 sh. ae'), (datetime.date(1131, 10, 13), 'biergarten hakuna matata 1131 bar +'), (datetime.date(2022, 10, 3), 'ts & . : . 3'), (datetime.date(2022, 10, 4), 'o . 4 ‘ ‘ es . . feast')]\n"
      ]
     }
    ],
    "source": [
-    "data = pytesseract.image_to_string(invert, lang='eng', config='--psm 6')\n",
-    "print(data)"
+    "phrase=[]\n",
+    "for i in df.iloc[:1,0]:\n",
+    "    c=0\n",
+    "    r = requests.get(i)\n",
+    "    print(i)\n",
+    "    with open('test.jpeg', 'wb') as out:\n",
+    "        out.write(r.content)\n",
+    "    invert=img_proc()   #Image Processing\n",
+    "    text=txt_exr(invert)    #Text Processing\n",
+    "    date=date_exr(text)     #Date Extractoin\n",
+    "    edate=df.iloc[c,1].to_pydatetime().date()\n",
+    "    print(edate,date)\n",
+    "    dmin=abs((date[0][0]-edate).days)\n",
+    "    k=0\n",
+    "    \n",
+    "    for j in range(len(date)):\n",
+    "        if abs((date[j][0]-edate).days)<dmin:\n",
+    "            dmin = abs((date[j][0]-edate).days) \n",
+    "            k=j\n",
+    "    phrase.append((date[k][0],date[k][1],edate))\n",
+    "            \n",
+    "    im = Image.open(\"test.jpeg\")\n",
+    "im.show()"
    ]
   },
   {
@@ -321,47 +367,131 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "subscription renewal date: mon 22 aug 2022 2022-08-22 00:00:00\n"
-     ]
-    }
-   ],
-   "source": [
-    "from dateutil import parser\n",
-    "text=data.lower().split('\\n')\n",
-    "for i in text:\n",
-    "    try:\n",
-    "        res = parser.parse(i, fuzzy=True)\n",
-    "        print(i,res)\n",
-    "    except:\n",
-    "        continue"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "['@ discovery+ »',\n",
-       " '< manage subscription',\n",
-       " 'times prime x discovery+',\n",
-       " 'subscription renewal date: mon 22 aug 2022',\n",
-       " 'cancel my subscription',\n",
-       " '']"
+       "[(datetime.date(2023, 5, 13), \"expires on 13 may '23\"),\n",
+       " (datetime.date(2022, 10, 2), '{2 (feu account')]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text"
+    "phrase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"expires on 13 may '23\",\n",
+       " '{2 (feu account',\n",
+       " 'expires on december 27, 2022',\n",
+       " 'subscription renewal date: mon 22 aug 2022']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phrase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://cdn.subspace.money/w_subscriptions/PKVCqar0VD_Bd5ZeH5u3b.jpeg'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[1,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'res' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\roshr\\Subspace\\subpsace.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/roshr/Subspace/subpsace.ipynb#X20sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m res\u001b[39m<\u001b[39mdatetime\u001b[39m.\u001b[39mdatetime\u001b[39m.\u001b[39mnow()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'res' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# res<datetime.datetime.now()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Converting Date from DataFrame into Usable Format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2022, 10, 22, 0, 0)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edate=df.iloc[3,1].to_pydatetime()\n",
+    "edate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://cdn.subspace.money/w_subscriptions/Xk5bMvR8J7I_H6ywBPgSe.jpeg'"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0,0]"
    ]
   }
  ],
