Few Debugging Alterations

--- a/subpsace.ipynb
+++ b/subpsace.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
     "    kernel = cv2.getStructuringElement(cv2.MORPH_RECT, (3,3))\n",
     "    opening = cv2.morphologyEx(thresh, cv2.MORPH_OPEN, kernel, iterations=1)\n",
     "    invert = 255 - opening\n",
-    "    cv2.imwrite('converted.jpg',invert)\n",
+    "    cv2.imwrite('converted.jpeg',invert)\n",
     "    return invert"
    ]
   },
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,127 +323,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://cdn.subspace.money/w_subscriptions/Xk5bMvR8J7I_H6ywBPgSe.jpeg\n",
-      "2023-05-13 [(datetime.date(2020, 1, 21), \"first became member on 21 jan '20\"), (datetime.date(2022, 10, 30), 'free deliveries on all up ta 30° extra off on'), (datetime.date(2023, 5, 13), \"expires on 13 may '23\"), (datetime.date(2022, 10, 15), 'routes bepress at sat opogrtsa at'), (datetime.date(2022, 10, 4), '; a oe 4 sh. ae'), (datetime.date(1131, 10, 13), 'biergarten hakuna matata 1131 bar +'), (datetime.date(2022, 10, 3), 'ts & . : . 3'), (datetime.date(2022, 10, 4), 'o . 4 ‘ ‘ es . . feast')]\n"
+      "40\n",
+      "41\n",
+      "42\n"
      ]
     }
    ],
    "source": [
     "phrase=[]\n",
-    "for i in df.iloc[:1,0]:\n",
-    "    c=0\n",
+    "c=0\n",
+    "fl=0\n",
+    "for i in df.iloc[:50,0]:\n",
+    "    c+=1\n",
     "    r = requests.get(i)\n",
-    "    print(i)\n",
+    "    # print(i)\n",
     "    with open('test.jpeg', 'wb') as out:\n",
     "        out.write(r.content)\n",
     "    invert=img_proc()   #Image Processing\n",
     "    text=txt_exr(invert)    #Text Processing\n",
     "    date=date_exr(text)     #Date Extractoin\n",
     "    edate=df.iloc[c,1].to_pydatetime().date()\n",
-    "    print(edate,date)\n",
-    "    dmin=abs((date[0][0]-edate).days)\n",
-    "    k=0\n",
-    "    \n",
-    "    for j in range(len(date)):\n",
-    "        if abs((date[j][0]-edate).days)<dmin:\n",
-    "            dmin = abs((date[j][0]-edate).days) \n",
-    "            k=j\n",
-    "    phrase.append((date[k][0],date[k][1],edate))\n",
-    "            \n",
-    "    im = Image.open(\"test.jpeg\")\n",
-    "im.show()"
+    "    # print(edate,date)\n",
+    "    try:\n",
+    "        dmin=abs((date[0][0]-edate).days)\n",
+    "        k=0\n",
+    "        \n",
+    "        for j in range(len(date)):\n",
+    "            if abs((date[j][0]-edate).days)<dmin:\n",
+    "                dmin = abs((date[j][0]-edate).days) \n",
+    "                k=j\n",
+    "        phrase.append((date[k][0],date[k][1],edate))\n",
+    "    except:\n",
+    "        fl+=1\n",
+    "        phrase.append((None,None,edate))\n",
+    "        print(c)\n",
+    "        im = Image.open(\"test.jpeg\")\n",
+    "        im.show()\n",
+    "        im = Image.open(\"converted.jpeg\")\n",
+    "        im.show()\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[(datetime.date(2023, 5, 13), \"expires on 13 may '23\"),\n",
-       " (datetime.date(2022, 10, 2), '{2 (feu account')]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "phrase"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[\"expires on 13 may '23\",\n",
-       " '{2 (feu account',\n",
-       " 'expires on december 27, 2022',\n",
-       " 'subscription renewal date: mon 22 aug 2022']"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "phrase"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://cdn.subspace.money/w_subscriptions/PKVCqar0VD_Bd5ZeH5u3b.jpeg'"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.iloc[1,0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'res' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\roshr\\Subspace\\subpsace.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/roshr/Subspace/subpsace.ipynb#X20sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m res\u001b[39m<\u001b[39mdatetime\u001b[39m.\u001b[39mdatetime\u001b[39m.\u001b[39mnow()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'res' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['billing details', 'plan', 'premium', '= 649/month', 'next billing date', '27 augquit 2o2s', '']\n",
+      "2023-05-28 []\n"
      ]
     }
    ],
    "source": [
-    "# res<datetime.datetime.now()"
+    "i=df.iloc[190,0]\n",
+    "r = requests.get(i)\n",
+    "# print(i)\n",
+    "with open('test.jpeg', 'wb') as out:\n",
+    "    out.write(r.content)\n",
+    "invert=img_proc()   #Image Processing\n",
+    "text=txt_exr(invert)    #Text Processing\n",
+    "print(text)\n",
+    "date=date_exr(text)     #Date Extractoin\n",
+    "edate=df.iloc[c,1].to_pydatetime().date()\n",
+    "print(edate,date)"
    ]
   },
   {
